# disparaai-

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup_database.py  start.py
disparaai/: __init__.py
disparaai/agents/: __init__.py  conversational_agent.py  copy_generation_agent.py  image_analysis_agent.py
disparaai/database/: __init__.py  connection.py  init.py  models.py
disparaai/integrations/: __init__.py  evolution_api.py
disparaai/services/: __init__.py  background_copy_service.py  campaign_service.py  file_processing_service.py  session_service.py
disparaai/utils/: base64_file_handler.py  logger.py  phone_validator.py
disparaai/workflows/: __init__.py  bulk_messaging_workflow.py
disparaai/workflows/steps/: approval_step.py  copy_generation_step.py  copy_selection_step.py  csv_upload_step.py  custom_message_step.py  direct_send_step.py  post_csv_options_step.py  welcome_step.py
scripts/: get_instance_name.py  init_db_manual.py
